source/gramatica/.antlr/TamagotchiCatParser.java
// Generated from /home/gislaine/dsl-lfa-trabalho-final/source/gramatica/TamagotchiCat.g4 by ANTLR 4.7.1

package source.gramatica;
import source.ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TamagotchiCatParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, FUN=8, IF=9, THEN=10, 
		ELSE=11, WHILE=12, STARTBLOCK=13, ENDBLOCK=14, LPAR=15, RPAR=16, LBKT=17, 
		RBKT=18, LBRC=19, RBRC=20, TRUE=21, FALSE=22, COMMA=23, SEMI=24, OR=25, 
		AND=26, EQU=27, NEQ=28, GEQ=29, GT=30, LEQ=31, LT=32, GETS=33, CHARACTERES=34, 
		FLOAT=35, INTEGER=36, CHAR=37, STRING=38, NL=39, WS=40, LINE_COMMENT=41, 
		SINGLE_STRING=42, DOUBLE_STRING=43, CHARACTERESIFIER=44;
	public static final int
		RULE_progr = 0, RULE_exprSeq = 1, RULE_expr = 2, RULE_fundecl = 3, RULE_formalArgs = 4, 
		RULE_ifExpr = 5, RULE_whileExpr = 6, RULE_blockExpr = 7, RULE_bexpr = 8, 
		RULE_disjExpr = 9, RULE_conjExpr = 10, RULE_addExpr = 11, RULE_multExpr = 12, 
		RULE_simpleExpr = 13, RULE_atomExpr = 14, RULE_exprList = 15, RULE_number = 16, 
		RULE_bool = 17, RULE_primitive = 18, RULE_string = 19;
	public static final String[] ruleNames = {
		"progr", "exprSeq", "expr", "fundecl", "formalArgs", "ifExpr", "whileExpr", 
		"blockExpr", "bexpr", "disjExpr", "conjExpr", "addExpr", "multExpr", "simpleExpr", 
		"atomExpr", "exprList", "number", "bool", "primitive", "string"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'+'", "'-'", "'*'", "'/'", "'//'", "'%'", "'!'", "'fun'", "'if'", 
		"'then'", "'else'", "'while'", "':'", "'$'", "'('", "')'", "'['", "']'", 
		"'{'", "'}'", "'true'", "'false'", "','", "';'", "'||'", "'&&'", "'=='", 
		"'!='", "'>='", "'>'", "'<='", "'<'", "'='", null, null, null, null, null, 
		"'\n'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, "FUN", "IF", "THEN", "ELSE", 
		"WHILE", "STARTBLOCK", "ENDBLOCK", "LPAR", "RPAR", "LBKT", "RBKT", "LBRC", 
		"RBRC", "TRUE", "FALSE", "COMMA", "SEMI", "OR", "AND", "EQU", "NEQ", "GEQ", 
		"GT", "LEQ", "LT", "GETS", "CHARACTERES", "FLOAT", "INTEGER", "CHAR", 
		"STRING", "NL", "WS", "LINE_COMMENT", "SINGLE_STRING", "DOUBLE_STRING", 
		"CHARACTERESIFIER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TamagotchiCat.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TamagotchiCatParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgrContext extends ParserRuleContext {
		public Expr result;
		public ExprSeqContext es;
		public ExprSeqContext exprSeq() {
			return getRuleContext(ExprSeqContext.class,0);
		}
		public ProgrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_progr; }
	}

	public final ProgrContext progr() throws RecognitionException {
		ProgrContext _localctx = new ProgrContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_progr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			((ProgrContext)_localctx).es = exprSeq();
			((ProgrContext)_localctx).result =  Block.from(((ProgrContext)_localctx).es.exprs);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprSeqContext extends ParserRuleContext {
		public List<Expr> exprs;
		public ExprContext e1;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(TamagotchiCatParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(TamagotchiCatParser.SEMI, i);
		}
		public List<TerminalNode> NL() { return getTokens(TamagotchiCatParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(TamagotchiCatParser.NL, i);
		}
		public ExprSeqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprSeq; }
	}

	public final ExprSeqContext exprSeq() throws RecognitionException {
		ExprSeqContext _localctx = new ExprSeqContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_exprSeq);

		       ((ExprSeqContext)_localctx).exprs =  new LinkedList<Expr>();
		       
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__6) | (1L << FUN) | (1L << IF) | (1L << WHILE) | (1L << LPAR) | (1L << LBKT) | (1L << LBRC) | (1L << TRUE) | (1L << FALSE) | (1L << SEMI) | (1L << CHARACTERES) | (1L << FLOAT) | (1L << INTEGER) | (1L << CHAR) | (1L << STRING) | (1L << NL))) != 0)) {
				{
				setState(48);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__1:
				case T__6:
				case FUN:
				case IF:
				case WHILE:
				case LPAR:
				case LBKT:
				case LBRC:
				case TRUE:
				case FALSE:
				case CHARACTERES:
				case FLOAT:
				case INTEGER:
				case CHAR:
				case STRING:
					{
					setState(43);
					((ExprSeqContext)_localctx).e1 = expr();
					setState(44);
					_la = _input.LA(1);
					if ( !(_la==SEMI || _la==NL) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					_localctx.exprs.add(((ExprSeqContext)_localctx).e1.result);
					}
					break;
				case SEMI:
				case NL:
					{
					setState(47);
					_la = _input.LA(1);
					if ( !(_la==SEMI || _la==NL) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public Expr result;
		public Token CHARACTERES;
		public ExprContext e1;
		public IfExprContext i1;
		public WhileExprContext w1;
		public BlockExprContext b1;
		public BexprContext x1;
		public FundeclContext d1;
		public TerminalNode CHARACTERES() { return getToken(TamagotchiCatParser.CHARACTERES, 0); }
		public TerminalNode GETS() { return getToken(TamagotchiCatParser.GETS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public IfExprContext ifExpr() {
			return getRuleContext(IfExprContext.class,0);
		}
		public WhileExprContext whileExpr() {
			return getRuleContext(WhileExprContext.class,0);
		}
		public BlockExprContext blockExpr() {
			return getRuleContext(BlockExprContext.class,0);
		}
		public BexprContext bexpr() {
			return getRuleContext(BexprContext.class,0);
		}
		public FundeclContext fundecl() {
			return getRuleContext(FundeclContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr);
		try {
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				((ExprContext)_localctx).CHARACTERES = match(CHARACTERES);
				setState(54);
				match(GETS);
				setState(55);
				((ExprContext)_localctx).e1 = expr();
				((ExprContext)_localctx).result =  new Assign((((ExprContext)_localctx).CHARACTERES!=null?((ExprContext)_localctx).CHARACTERES.getText():null), ((ExprContext)_localctx).e1.result);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				((ExprContext)_localctx).i1 = ifExpr();
				((ExprContext)_localctx).result =  ((ExprContext)_localctx).i1.result;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(61);
				((ExprContext)_localctx).w1 = whileExpr();
				((ExprContext)_localctx).result =  ((ExprContext)_localctx).w1.result;
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(64);
				((ExprContext)_localctx).b1 = blockExpr();
				((ExprContext)_localctx).result =  ((ExprContext)_localctx).b1.result;
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(67);
				((ExprContext)_localctx).x1 = bexpr();
				((ExprContext)_localctx).result =  ((ExprContext)_localctx).x1.result;
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(70);
				((ExprContext)_localctx).d1 = fundecl();
				((ExprContext)_localctx).result =  ((ExprContext)_localctx).d1.result;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FundeclContext extends ParserRuleContext {
		public Expr result;
		public Token CHARACTERES;
		public FormalArgsContext fa;
		public ExprContext e1;
		public TerminalNode FUN() { return getToken(TamagotchiCatParser.FUN, 0); }
		public TerminalNode CHARACTERES() { return getToken(TamagotchiCatParser.CHARACTERES, 0); }
		public TerminalNode LPAR() { return getToken(TamagotchiCatParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(TamagotchiCatParser.RPAR, 0); }
		public TerminalNode GETS() { return getToken(TamagotchiCatParser.GETS, 0); }
		public FormalArgsContext formalArgs() {
			return getRuleContext(FormalArgsContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public FundeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fundecl; }
	}

	public final FundeclContext fundecl() throws RecognitionException {
		FundeclContext _localctx = new FundeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fundecl);
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				match(FUN);
				setState(76);
				((FundeclContext)_localctx).CHARACTERES = match(CHARACTERES);
				setState(77);
				match(LPAR);
				setState(78);
				((FundeclContext)_localctx).fa = formalArgs();
				setState(79);
				match(RPAR);
				setState(80);
				match(GETS);
				setState(81);
				((FundeclContext)_localctx).e1 = expr();
				((FundeclContext)_localctx).result =  new FunDecl((((FundeclContext)_localctx).CHARACTERES!=null?((FundeclContext)_localctx).CHARACTERES.getText():null), ((FundeclContext)_localctx).fa.args, ((FundeclContext)_localctx).e1.result);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				match(FUN);
				setState(85);
				match(LPAR);
				setState(86);
				((FundeclContext)_localctx).fa = formalArgs();
				setState(87);
				match(RPAR);
				setState(88);
				match(GETS);
				setState(89);
				((FundeclContext)_localctx).e1 = expr();
				((FundeclContext)_localctx).result =  Lambda.declare(((FundeclContext)_localctx).fa.args, ((FundeclContext)_localctx).e1.result);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalArgsContext extends ParserRuleContext {
		public List<String> args;
		public Token CHARACTERES;
		public List<TerminalNode> CHARACTERES() { return getTokens(TamagotchiCatParser.CHARACTERES); }
		public TerminalNode CHARACTERES(int i) {
			return getToken(TamagotchiCatParser.CHARACTERES, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TamagotchiCatParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TamagotchiCatParser.COMMA, i);
		}
		public FormalArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formalArgs; }
	}

	public final FormalArgsContext formalArgs() throws RecognitionException {
		FormalArgsContext _localctx = new FormalArgsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_formalArgs);

		       ((FormalArgsContext)_localctx).args =  new ArrayList<>();
		       
		int _la;
		try {
			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RPAR:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case CHARACTERES:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				((FormalArgsContext)_localctx).CHARACTERES = match(CHARACTERES);
				_localctx.args.add((((FormalArgsContext)_localctx).CHARACTERES!=null?((FormalArgsContext)_localctx).CHARACTERES.getText():null));
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(97);
					match(COMMA);
					setState(98);
					((FormalArgsContext)_localctx).CHARACTERES = match(CHARACTERES);
					_localctx.args.add((((FormalArgsContext)_localctx).CHARACTERES!=null?((FormalArgsContext)_localctx).CHARACTERES.getText():null));
					}
					}
					setState(104);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfExprContext extends ParserRuleContext {
		public Expr result;
		public ExprContext c1;
		public ExprContext t1;
		public ExprContext t3;
		public TerminalNode IF() { return getToken(TamagotchiCatParser.IF, 0); }
		public TerminalNode THEN() { return getToken(TamagotchiCatParser.THEN, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(TamagotchiCatParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(TamagotchiCatParser.NL, i);
		}
		public TerminalNode ELSE() { return getToken(TamagotchiCatParser.ELSE, 0); }
		public IfExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifExpr; }
	}

	public final IfExprContext ifExpr() throws RecognitionException {
		IfExprContext _localctx = new IfExprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ifExpr);

		       List<GuardedExpr> gs = new LinkedList<>();
		       
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(IF);
			setState(108);
			((IfExprContext)_localctx).c1 = expr();
			setState(109);
			match(THEN);
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NL) {
				{
				setState(110);
				match(NL);
				}
			}

			setState(113);
			((IfExprContext)_localctx).t1 = expr();
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(114);
				match(NL);
				}
				break;
			}
			gs.add(new GuardedExpr(((IfExprContext)_localctx).c1.result, ((IfExprContext)_localctx).t1.result));
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(118);
				match(ELSE);
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NL) {
					{
					setState(119);
					match(NL);
					}
				}

				setState(122);
				((IfExprContext)_localctx).t3 = expr();
				setState(124);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(123);
					match(NL);
					}
					break;
				}

				       gs.add(new GuardedExpr(Bool.VERUM, ((IfExprContext)_localctx).t3.result));
				      
				}
				break;
			}
			((IfExprContext)_localctx).result =  new Cond(gs);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileExprContext extends ParserRuleContext {
		public Expr result;
		public ExprContext c1;
		public ExprContext d1;
		public TerminalNode WHILE() { return getToken(TamagotchiCatParser.WHILE, 0); }
		public TerminalNode STARTBLOCK() { return getToken(TamagotchiCatParser.STARTBLOCK, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode NL() { return getToken(TamagotchiCatParser.NL, 0); }
		public WhileExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileExpr; }
	}

	public final WhileExprContext whileExpr() throws RecognitionException {
		WhileExprContext _localctx = new WhileExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_whileExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(WHILE);
			setState(133);
			((WhileExprContext)_localctx).c1 = expr();
			setState(134);
			match(STARTBLOCK);
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NL) {
				{
				setState(135);
				match(NL);
				}
			}

			setState(138);
			((WhileExprContext)_localctx).d1 = expr();
			((WhileExprContext)_localctx).result =  new While(((WhileExprContext)_localctx).c1.result, ((WhileExprContext)_localctx).d1.result);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockExprContext extends ParserRuleContext {
		public Expr result;
		public ExprSeqContext es;
		public TerminalNode LBRC() { return getToken(TamagotchiCatParser.LBRC, 0); }
		public TerminalNode RBRC() { return getToken(TamagotchiCatParser.RBRC, 0); }
		public ExprSeqContext exprSeq() {
			return getRuleContext(ExprSeqContext.class,0);
		}
		public BlockExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockExpr; }
	}

	public final BlockExprContext blockExpr() throws RecognitionException {
		BlockExprContext _localctx = new BlockExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_blockExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(LBRC);
			setState(142);
			((BlockExprContext)_localctx).es = exprSeq();
			setState(143);
			match(RBRC);
			((BlockExprContext)_localctx).result =  Block.from(((BlockExprContext)_localctx).es.exprs);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BexprContext extends ParserRuleContext {
		public Expr result;
		public DisjExprContext d1;
		public DisjExprContext d2;
		public List<DisjExprContext> disjExpr() {
			return getRuleContexts(DisjExprContext.class);
		}
		public DisjExprContext disjExpr(int i) {
			return getRuleContext(DisjExprContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(TamagotchiCatParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(TamagotchiCatParser.OR, i);
		}
		public BexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bexpr; }
	}

	public final BexprContext bexpr() throws RecognitionException {
		BexprContext _localctx = new BexprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_bexpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			((BexprContext)_localctx).d1 = disjExpr();
			((BexprContext)_localctx).result =  ((BexprContext)_localctx).d1.result;
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(148);
				match(OR);
				setState(149);
				((BexprContext)_localctx).d2 = disjExpr();
				((BexprContext)_localctx).result =  new FunCall(Ops.OR, _localctx.result, ((BexprContext)_localctx).d2.result);
				}
				}
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DisjExprContext extends ParserRuleContext {
		public Expr result;
		public ConjExprContext c1;
		public ConjExprContext c2;
		public List<ConjExprContext> conjExpr() {
			return getRuleContexts(ConjExprContext.class);
		}
		public ConjExprContext conjExpr(int i) {
			return getRuleContext(ConjExprContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(TamagotchiCatParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(TamagotchiCatParser.AND, i);
		}
		public DisjExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_disjExpr; }
	}

	public final DisjExprContext disjExpr() throws RecognitionException {
		DisjExprContext _localctx = new DisjExprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_disjExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			((DisjExprContext)_localctx).c1 = conjExpr();
			((DisjExprContext)_localctx).result =  ((DisjExprContext)_localctx).c1.result;
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(159);
				match(AND);
				setState(160);
				((DisjExprContext)_localctx).c2 = conjExpr();
				((DisjExprContext)_localctx).result =  new FunCall(Ops.AND, _localctx.result, ((DisjExprContext)_localctx).c2.result);
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
